# python-inject-environment-variables

./: .gitignore  LICENSE  README.md  pyproject.toml  tox.ini
inject_environment_variables/: __init__.py
inject_environment_variables/decorator/: __init__.py
tests/: test_inject.py
